<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                            http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   
   <groupId>com.rian</groupId>
   <artifactId>SocialMedia</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   
   <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <maven.compiler.source>23</maven.compiler.source>
       <maven.compiler.target>23</maven.compiler.target>
       <exec.mainClass>com.rian.socialmedia.Login</exec.mainClass>
   </properties>
   
   <build>
       <plugins>
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
               <version>3.11.0</version>
               <configuration>
                   <source>${maven.compiler.source}</source>
                   <target>${maven.compiler.target}</target>
                   <compilerArgs>
                       <arg>--enable-preview</arg>
                       <arg>-Xlint</arg>
                   </compilerArgs>
               </configuration>
           </plugin>
           
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-jar-plugin</artifactId>
               <version>3.3.0</version>
               <configuration>
                   <archive>
                       <manifest>
                           <mainClass>${exec.mainClass}</mainClass>
                       </manifest>
                   </archive>
               </configuration>
           </plugin>

           <plugin>
               <artifactId>maven-assembly-plugin</artifactId>
               <version>3.6.0</version>
               <configuration>
                   <descriptorRefs>
                       <descriptorRef>jar-with-dependencies</descriptorRef>
                   </descriptorRefs>
                   <archive>
                       <manifest>
                           <mainClass>${exec.mainClass}</mainClass>
                       </manifest>
                   </archive>
               </configuration>
               <executions>
                   <execution>
                       <phase>package</phase>
                       <goals>
                           <goal>single</goal>
                       </goals>
                   </execution>
               </executions>
           </plugin>
       </plugins>
   </build>
   
   <dependencies>
       <dependency>
           <groupId>org.netbeans.external</groupId>
           <artifactId>AbsoluteLayout</artifactId>
           <version>RELEASE180</version>
       </dependency>
       <dependency>
           <groupId>com.amazonaws</groupId>
           <artifactId>aws-java-sdk-dynamodb</artifactId>
           <version>1.12.261</version>
       </dependency>
       <dependency>
           <groupId>software.tnb</groupId>
           <artifactId>system-x-aws-dynamo-db</artifactId>
           <version>0.0.14</version>
           <type>jar</type>
       </dependency>
       <dependency>
           <groupId>cc.carm.lib</groupId>
           <artifactId>easyplugin-user</artifactId>
           <version>1.5.12</version>
           <type>jar</type>
       </dependency>
   </dependencies>
</project>